--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,30 @@
-
-
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Baloo Chettan 2', sans-serif;
 }
-
-body{
-    background: #fec107;
-    padding: 0 10px
-}
+body {
+    background-image: url('aeroplane.jpg');
+    background-size: 100%;
+  }
 
 .container{
     max-width: 500px;
     width: 100%;
-    background: #fff;
+    height: auto;
+    background: rgba(0, 0, 0, 0.5);
     margin: 20px auto;
     padding: 30px;
-    box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+    box-shadow: 1px 1px 2px rgba(0,200,0,0.125);
+    
 }
 
 .container .title{
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 25px;
-    color: #fec107;
+    color: azure;
     text-transform: uppercase;
     text-align: center;    
 }
@@ -43,9 +41,10 @@ body{
 
 .container .form .input_field label{
     width: 200px;
-    color: #757575;
+    color: #f0f0f0;
     font-size: 14px;
     margin-left: 4px;
+    font-weight: 200;
 }
 
 .container .form .input_field .input{
@@ -66,11 +65,14 @@ body{
     text-align: center;
 }
 .container .form .input_field .btn{
-    width: 100%;
-    height: 34px;
-    background-color: #fec107;
+    width: 25%;
+    height: 50px;
+    background-color: #02007e;
     color: white;
     text-align: center;
+    margin: auto;
+    font-size: large;
+    font-weight: bold;
 
 }
 
@@ -78,6 +80,7 @@ body{
 .pred{
     text-align: center;
     font-size: large;
+    color: azure;
 }
 
 .input_field{
@@ -89,3 +92,5 @@ body{
     width: 25%;
     text-align: left;
 }
+
+
