--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,8 @@
 body {
     background-image: url('aeroplane.jpg');
     background-size: 100%;
+    width: 100%;
+    background-size: 100%;
   }
 
 .container{
