--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,9 +6,8 @@
 }
 body {
     background-image: url('aeroplane.jpg');
-    background-size: 100%;
+    background-size: 100% 100%;
     width: 100%;
-    background-size: 100%;
   }
 
 .container{
